# Steadywin-RS485-Connector

./: .gitignore  CMakeLists.txt  README.md
docs/: rs486_steadywin_protocol_v302.md
include/steadywin/: motor_error.h  serial_port_interface.h  steadywin_motor.h  steadywin_protocol.h  steadywin_types.h  windows_serial_port.h
src/: main.cpp  steadywin_motor.cpp  steadywin_protocol.cpp  windows_serial_port.cpp
